<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">考拉有礼</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mainpage">首页</string>
    <string name="usercenter">个人中心</string>
    <string name="collect">收藏</string>
    <string name="setting">设置</string>
    <string name="exchange_gift">兑换奖品</string>
    <string name="address_info">收货信息</string>
    <string name="express_info">物流信息</string>
    <string name="big_gift_bag">大礼包</string>
    <string name="exchange_need">兑换条件</string>
    <string name="exchange">兑换</string>
    <string name="has_collected">已收藏</string>
    <string name="has_exchanged">已兑换</string>
    <string name="gift_desc">奖品介绍</string>
    <string name="gift_recommend">推荐奖品</string>
    <string name="remain_count">剩余 %1$d 件</string>
    <string name="exchanged_count">已有 %1$d 人兑换</string>
    <string name="next_step">下一步</string>
    <string name="input_exchanged_captcha">输入兑奖码</string>
    <string name="toast_captcha_not_null">验证码不能为空</string>
    <string name="login">登录</string>
    <string name="logout">退出</string>
    <string name="register">注册</string>
    <string name="input_account">输入手机号码</string>
    <string name="input_password">输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="reset_password">重置密码</string>
    <string name="hint_reset_password">输入注册时的手机号码，以重置密码</string>
	<string name="request_captcha">获取验证码</string>
	<string name="confirm">确认</string>
	<string name="input_captcha">输入验证码</string>
	<string name="mobile_number_error">手机号码有误</string>
	<string name="get_captcha_success">验证码已发送</string>
	<string name="get_captcha_failed">验证码发送失败</string>
	<string name="account_exist">您的手机号码已经注册过了，请返回登录</string>
	<string name="captcha_error">验证码无效</string>
	<string name="login_failed">登陆失败，请检查用户名密码</string>
	<string name="register_failed">注册失败</string>
	<string name="input_password_repeat">再次输入密码</string>
	<string name="password_not_null">密码不能为空</string>
	<string name="password_repeat_not_null">确认密码不能为空</string>
	<string name="password_not_equal">两次输入密码不一致</string>
	<string name="consignee_name">收货人</string>
	<string name="delivery_address">收货地址</string>
	<string name="contact_phone_number">联系电话</string>
	<string name="edit">编辑</string>
	<string name="delete">删除</string>
	<string name="address_default">默认信息</string>
	<string name="address_set_default">设为默认</string>
	<string name="account">账号</string>
	<string name="notification">通知</string>
	<string name="account_bind">已绑定手机号</string>
	<string name="notification_push">推送通知</string>
	<string name="user_guide">用户指南</string>
	<string name="service_item">服务条款</string>
	<string name="add_address_info">新增收货信息</string>
	<string name="modify_address_info">编辑收货信息</string>
	<string name="save">保存</string>
	<string name="add">新增</string>
	<string name="my_gift">我的礼品</string>
	<string name="exchange_success">兑换成功</string>
	<string name="exchange_failed">兑换失败</string>
	<string name="exchange_captcha_error">兑换码无效或已经兑换过礼品</string>
	<string name="delete_address_success">删除收货地址成功</string>
	<string name="delete_address_failed">删除收货地址失败</string>
	<string name="delete_collect_confirm">是否删除收藏</string>
</resources>