<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff7f7f5"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textview_forgetpassword_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/hint_reset_password"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edittext_forgetpassword_account"
        style="@style/kl_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_account"
        android:inputType="number"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_forgetpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_1"
        android:onClick="onConfirmButtonClicked"
        android:text="@string/reset_password"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

</LinearLayout>