<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff7f7f5"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/account"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ffc7c7c9" />

    <LinearLayout
        android:id="@+id/layout_setting_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/account_bind"
            android:textColor="#ff333333"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textview_setting_bindphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_margin="10dp"
            android:gravity="right"
            android:text="@string/account_bind"
            android:textColor="#ffc7c7c9"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ffc7c7c9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/notification"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ffc7c7c9" />

    <LinearLayout
        android:id="@+id/layout_setting_push"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/notification_push"
            android:textColor="#ff333333"
            android:textSize="15sp" />

        <ToggleButton
            android:id="@+id/togglebutton_setting_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_switch"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ffc7c7c9" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ffc7c7c9" />

    <FrameLayout
        android:id="@+id/layout_setting_user_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/user_guide"
            android:textColor="#ff333333"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_setting_user_guide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:onClick="onSettingUserGuideClicked" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ffc7c7c9" />

    <FrameLayout
        android:id="@+id/layout_setting_service_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/service_item"
            android:textColor="#ff333333"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_setting_service_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:onClick="onSettingServiceItemClicked" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ffc7c7c9" />

    <Button
        android:id="@+id/button_setting_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_logout"
        android:onClick="onSettingLogoutButtonClicked"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

</LinearLayout>